# app_credit_v2

./: .env  .gitignore  docker-compose-be.yml  docker-compose-db.yml  docker-compose-fe.prod.yml  docker-compose-fe.yml  docker-compose.scheduler.yml
backend/: .gitignore  Dockerfile  init_db.py  main.py  pyproject.toml
backend/app/: __init__.py  backend_pre_start.py  main.py
backend/app/core/: __init__.py  database.py  enums.py
backend/app/crud/: __init__.py  dashboard.py  lich_su.py  lich_su_tra_lai.py  no_phai_thu.py  tin_chap.py  tra_gop.py
backend/app/models/: __init__.py  lich_su.py  lich_su_tra_lai.py  tin_chap.py  tra_gop.py
backend/app/routers/: __init__.py  dashboard.py  lich_su.py  lich_su_tra_lai.py  no_phai_thu.py  tin_chap.py  tra_gop.py
backend/app/schemas/: __init__.py  dashboard.py  lich_su.py  lich_su_tra_lai.py  no_phai_thu.py  response.py  tin_chap.py  tra_gop.py
backend/app/utils/: __init__.py  calculations.py  id_generator.py  lich_su.py
backend/app/websocket/: __init__.py  events.py  manager.py  router.py
backend/scripts/: prestart.sh
frontend/: Dockerfile  Dockerfile.dev  next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/config/: config.ts
frontend/src/hooks/: useThongKe.ts  useTinChap.ts  useTraGop.ts  useWebSocket.ts
frontend/src/providers/: WebSocketProvider.tsx
frontend/src/services/: api.ts  deleteApi.ts  paymentApi.ts  thongkeApi.ts  websocket.ts
frontend/src/types/: contract.ts  contractDetail.ts  (+1 more)
scheduler/: .env  .env copy  Dockerfile  README.md  entrypoint.sh  run_daily_payments.sh
(+29 files in other folders)
